[package]
name = "mozcomp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
lightningcss = { version = "1.0.0-alpha.67", features = ["visitor"] }
walkdir = "2.5.0"
oxc = { version = "*", features = ["full"] }
toml = "0.9.2"
anyhow = "1.0.98"
serde = "1.0.219"
pathdiff = "0.2.3"
regex = "1.11.1"
glob = "0.3.2"
petgraph = "0.8.2"
thiserror = "2.0.12"
oxc_traverse = "0.78.0"
oxc_ast = "0.1"
oxc_codegen = "0.78.0"
